# pyutils

./: .buildinfo  .coveragerc  README.md  README.rst  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  pyutils.html  pyutils.test.html  readme.html  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: check_package.yml  test_deploy.yml
_sources/: pyutils.rst.txt  pyutils.test.rst.txt
docs/source/: conf.py  index.rst
source/: conf.py  pyutils.rst
src/pyutils/: __init__.py  get_rel_dir.py  here.py  timer.py
src/pyutils/test/: test_timer.py
test/: get_rel_dir_test.py  here_test.py  timer_test.py
tests/: get_rel_dir_test.py
