[metadata]
name = pyutils-dzhang32
version = 0.0.1
author = David Zhang
author_email = dyzhang32@gmail.com
description = A home for my commonly-used python utility functions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dzhang32/pyutils
project_urls =
    Bug Tracker = https://github.com/dzhang32/pyutils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src